--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 notebooks/notes.py
 notebooks/EDA_jaume.ipynb
 notebooks/explicacion_azure.ipynb
-4.model_script_azure.ipynb
+notebooks/4.model_script_azure.ipynb
