--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ data/dffinal.csv
 data/model.csv
 data/vehiculos-de-segunda-mano-sample.csv
 data/municipios.csv
+data/car_price.csv
+pipeline_transformación_modelo.png
+opticar_logo.jpeg
